<resources>
    <string name="app_name">Gamebox2019</string>
    <string name="madeby">Made by :</string>
    <string name="creator1">Gatien DELERUE</string>
    <string name="creator2">Guillaume GRASSET</string>
    <string name="creator3">Samy HUSSAEIN</string>
    <string name="creator4">Florian PADEL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="enter">Enter name</string>
    <string name="submit">Submit</string>
    <string name="enterletter">Enter letter</string>
    <string name="used">Used letter:</string>
    <string name="this_list_is_empty">This list is empty</string>
    <string name="score">Score</string>
    <string name="menu">Return to main menu</string>
    <string name="remainingTimeCount">60</string>
    <string name="remainingTimeUnit">seconds</string>
    <string name="remainingTime">Remaining time :</string>
    <string name="game_over">GAME OVER</string>
    <string name="loose">You loose</string>
    <string name="Win">You win</string>
    <string name="game_name">Game name</string>
    <string name="game_image">Game image</string>
    <string name="go_back_button">Go back button</string>
</resources>
