<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".game_list" android:id="@+id/frameLayout">
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.7"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="20sp"
            android:textColor="#2196F3" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="140dp" android:layout_marginRight="140dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2"/>
    <TextView
            android:text="@string/madeby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp" android:layout_marginRight="128dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp"/>
    <TextView
            android:text="@string/creator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp"/>
    <TextView
            android:text="@string/creator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp"
            app:layout_constraintHorizontal_bias="0.509" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/creator3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp" app:layout_constraintHorizontal_bias="0.49"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/creator4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp" app:layout_constraintHorizontal_bias="0.49"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
</android.support.constraint.ConstraintLayout>