<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Hangman">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:src="@drawable/hg0"
                android:layout_width="match_parent"
                android:layout_height="450dp" android:id="@+id/hangedGuy"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/wordText" android:textSize="30sp"
                android:textStyle="bold" android:gravity="center"
                android:textAllCaps="true"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/usedLetterText" android:textAllCaps="true"
                android:text="@string/used"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/letter" android:hint="@string/enterletter" android:layout_weight="1"
                    android:maxLength="1"/>
            <Button
                    android:text="@string/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/submitButton" android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>